[package]
name = "flights_project"
version = "0.1.0"
edition = "2021"
authors = ["Nikola Anicic <anicicn84@gmail.com>"]

# [lib]
# name = "flights_start_end"
# path = "src/flights_start_end.rs"

# [[bin]]
# name = "flights"
# path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1.0", features=["derive"]}
serde_json={version="1.0"}
warp={version="0.3.2"}
tokio={version="1.0", features=["macros", "rt-multi-thread", "time"]}